Add "Visuals Only" toggle
Radiance tier no longer has any effect on already-radiant enemies unless "Force Radiance" is on.
Fix bug where radiance could not be forced outside of main campaign levels.

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,4 +3,7 @@
   <packageSources>
     <add key="BepInEx" value="https://nuget.bepinex.dev/v3/index.json" />
   </packageSources>
+  <packageSources>
+    <add key="Krafs.Publicizer" value="https://www.nuget.org/packages/Krafs.Publicizer" />
+  </packageSources>
 </configuration>
