--- a/package/manifest.json
+++ b/package/manifest.json
@@ -1,10 +1,10 @@
 {
     "name": "Radiance_Enabler",
-    "version_number": "1.0.0",
+    "version_number": "1.0.1",
     "website_url": "https://github.com/earthlingOnFire/Radiance-Enabler",
     "description": "Makes it easier to enable radiance.",
     "dependencies": [
         "BepInEx-BepInExPack-5.4.2100",
-        "Skips intermission cutscenes."
+        "Hydraxous-Configgy-1.0.3"
     ]
 }
